# spearmint

./: .mypy.ini  CHANGELOG.md  LICENSE  README.md  conftest.py  pyproject.toml  setup.cfg  setup.py
.circleci/: config.yml
.github/workflows/: lint.yml  mypy.yml  publish_to_pypi.yml  ruff.yml  test.yml
docs/: Untitled.ipynb  abracadabra_basics.ipynb  bayesian_hypothesis_tests.ipynb  spearmint_basics.ipynb
images/: test.html
spearmint/: __init__.py  config.py  dataset.py  distributions.py  experiment.py  hypothesis_test.py  mixin.py  stats.py  table.py  typing.py  utils.py  vis.py
spearmint/inference/: __init__.py  inference_base.py
spearmint/inference/bayesian/: __init__.py  bayesian_inference.py  delta.py  results.py
spearmint/inference/bayesian/models/: analytic_base.py  binary.py  continuous.py  counts.py
spearmint/inference/frequentist/: __init__.py  bootstrap.py  bootstrap_delta.py  frequentist_inference.py  frequentist_results.py  means.py  means_delta.py  proportions.py  proportions_delta.py  rates.py  rates_ratio.py  results.py
test/: conftest.py  pytest.ini  test_bayesian_binary.py  test_bayesian_continuous.py  test_bayesian_counts.py  test_bayesian_inference_methods.py  test_bootstrap_delta.py  test_config.py  test_dataset.py  test_distributions.py  test_frequentist_binary.py  test_frequentist_continuous.py  test_frequentist_counts.py  test_hypothesis_test.py  test_inference.py  test_means_delta.py  test_mixin.py  test_proportions_delta.py  test_rates_ratio.py  test_stats.py  test_table.py  test_utils.py  test_vis.py
