
[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "spearmint"
dynamic = ["version"]
license = {file = "LICENSE"}
description = "Refreshing hypothesis testing in python!"
readme = "README.md"

authors = [
    {name = "Dustin Stansbury", email = "dustin.stansbury@gmail.com"}
]
maintainers = [
    {name = "Dustin Stansbury", email = "dustin.stansbury@gmail.com"}
]

keywords = [
    "data science",
    "hypothesis testing",
    "AB testing",
    "statistics",
    "bayesian inference",
    "bootstrap statistics"
]

classifiers = [
    "Programming Language :: Python",
    "Development Status :: 4 - Beta",
    "Framework :: Jupyter :: JupyterLab",
    "Topic :: Scientific/Engineering"
]

requires-python = ">=3.10"
dependencies = [
    "numpy>=1.25.2",
    "scipy>=1.11.2",
    "statsmodels>=0.14.0",
    "pandas>=2.1.1",
    "pymc>=5.8.0",
    "holoviews>=1.18.0",
    "matplotlib>=3.8.0",
    "rich"
]

[project.optional-dependencies]
notebook = ["jupyterlab>=4.0.6"]
test = [
    "ruff",
    "mypy",
    "pytest",
    "pytest-coverage"
]

[project.urls]
Homepage = "https://github.com/dustinstansbury/spearmint"
Documentation = "https://github.com/dustinstansbury/spearmint"
Repository = "https://github.com/dustinstansbury/spearmint.git"
"Bug Tracker" = "https://github.com/dustinstansbury/spearmint/issues"
Changelog = "https://github.com/dustinstansbury/spearmint/blob/main/CHANGELOG.md"

[tool.setuptools_scm]
version_file = "spearmint/_version.py"