
[metadata]
name = spearmint
version = 0.0.1
authors = 
    {name = Dustin Stansbury, email = dustin.stansbury@gmail.com}

maintainers = 
    {name = Dustin Stansbury, email = dustin.stansbury@gmail.com}

description = Refreshing hypothesis testing in python!
long_description = file: README.md
license = {file = "LICENSE"}
keywords = "hypothesis testing", "AB testing", "statistics"
classifiers =
    "Programming Language :: Python",
    "Development Status :: 4 - Beta",
    "Framework :: Jupyter :: JupyterLab",
    "Topic :: Scientific/Engineering"

[urls]
Homepage = "https://github.com/dustinstansbury/spearmint"
Documentation = "https://github.com/dustinstansbury/spearmint"
Repository = "https://github.com/dustinstansbury/spearmint.git"
"Bug Tracker" = "https://github.com/dustinstansbury/spearmint/issues"
Changelog = "https://github.com/dustinstansbury/spearmint/blob/main/CHANGELOG.md"

[options]
python_requires = >=3.9
packages = find:
zip_safe = True

install_requires =
    numpy>=1.25.2
    scipy>=1.11.2
    statsmodels>=0.14.0
    pandas>=2.1.1
    pymc>=5.8.0
    holoviews>=1.18.0
    matplotlib>=3.8.0
    rich

[options.extras_require]
notebook =
    jupyterlab>=4.0.6

test = 
    ruff
    mypy
    pytest
    pytest-coverage

[options.packages.find]
exclude =
    images*
    docs*
    test*
    htmlcov*